# AoC2024

./: .gitignore  CMakeLists.txt
Source/: main.cpp
Source/Helpers/: AoCHelpers.cpp  AoCHelpers.h
Source/Solutions/: AoCSolution1.cpp  AoCSolution1.h  AoCSolution2.cpp  AoCSolution2.h  AoCSolution3.cpp  AoCSolution3.h  AoCSolution4.cpp  AoCSolution4.h  AoCSolution5.cpp  AoCSolution5.h  AoCSolution6.cpp  AoCSolution6.h
